# nucleo-l476rg-rtic-bno08x-rvc

./: Cargo.toml  README.md  flasher.conf  memory.x  reset.jlink  reset.sh
.cargo/: config
src/: main.rs
