[package]
authors = ["Matvei <klimatt.gu@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "nucleo-l476rg-rtic-bno08x-rvc"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.7"
cortex-m-rt = "0.6.13"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
embedded-hal = "0.2.4"
cortex-m-rtic = "0.6.0-rc.2"
dwt-systick-monotonic = "0.1.0-rc.1"
cty = "0.2.1"
nb = "1.0.0"
bno08x-rvc = "0.1.1"
bbqueue = "0.5.0"

[dependencies.stm32l4xx-hal]
version = "0.6"
default-features = false
features = ["rt", "stm32l4x6"]
optional = false

[[bin]]
name = "nucleo-l476rg-rtic-bno08x-rvc"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = false# symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = 'z' #z

